--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background: linear-gradient(#011d3c, #48ff00);
 }
 ::-webkit-scrollbar{
   display: none;
